--- a/fonts/main.html
+++ b/fonts/main.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="icons">
                     <img src="img/search.svg" alt="search">
-                    <a href="kab.html">
+                    <a href="#">
                     <img src="img/acount.svg" alt="acc">
                     </a>
                 </div>
